adaptive for 320 and full are done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Surface</title>
     <link rel="stylesheet" media="(max-width: 320px)" href="styles/style-320.css">
-    <link rel="stylesheet" media="(min-width:321px)" href="style.css">
+    <link rel="stylesheet" media="(min-width: 321px)" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="owl-carousel/owl.theme.css" rel="stylesheet"> </head>
@@ -29,12 +29,10 @@
         <div class="sports big"> <span>football</span> <span>basketball</span> <span>baseball</span> <span>soccer</span> <span>ice hockey</span> </div>
     </div>
     <div class="noslider-box">
-        
         <div class="slider-photo-full-athlete"> <img src="images/cross-full-1.png" alt="" class="cross-full-1"> <img src="images/cross-full-2.png" alt="" class="cross-full-2"> <img src="images/line-full-1.png" alt="" class="line-full-1"> <img src="images/footballer-full.png" alt="athlete HD" class="footballer-full"> </div>
         <div class="texts">
-           <div class="noslider-heading">
-               <h2>athlets</h2>
-           </div>
+            <div class="noslider-heading">
+                <h2>athlets</h2> </div>
             <div class="noslider-text text-connection">
                 <div class="noslider-text-content">
                     <h3 class="connection">connection</h3>
@@ -88,12 +86,10 @@
         </div>
     </div>
     <div class="noslider-box">
-        
-        <div class="slider-photo-full-player"> <img src="images/bplayer-full.png" alt="basketballer HD" class="bplayer-full"> <img  src="images/line-full-2.png" alt="" class="line-full-2"> <img  src="images/line-full-2.png" alt="" class="line-full-3">  <img src="images/cross-full-3.png" alt="" class="cross-full-5"> <img src="images/cross-full-1.png" alt="" class="cross-full-3"> <img src="images/cross-full-2.png" alt="" class="cross-full-4">  </div>
+        <div class="slider-photo-full-player"> <img src="images/bplayer-full.png" alt="basketballer HD" class="bplayer-full"> <img src="images/line-full-2.png" alt="" class="line-full-2"> <img src="images/line-full-2.png" alt="" class="line-full-3"> <img src="images/cross-full-3.png" alt="" class="cross-full-5"> <img src="images/cross-full-1.png" alt="" class="cross-full-3"> <img src="images/cross-full-2.png" alt="" class="cross-full-4"> </div>
         <div class="texts">
-           <div class="noslider-heading-left">
-               <h2>players</h2>
-           </div>
+            <div class="noslider-heading-left">
+                <h2>players</h2> </div>
             <div class="noslider-text text-connection">
                 <div class="noslider-text-content left">
                     <h3 class="connection">connection</h3>
@@ -114,7 +110,7 @@
             </div>
         </div>
     </div>
-<div class="slider-box">
+    <div class="slider-box">
         <h2>players</h2>
         <div class="slider-photo"> <img src="images/cross1.png" alt="cross-1" class="pl-cross-1"> <img src="images/cross2.png" alt="cross-2" class="pl-cross-2"> <img src="images/line2.png" alt="line-2" class="pl-line-1"> <img src="images/line2.png" alt="line-2" class="pl-line-2"> <img src="images/bplayer.png" alt="basketball player" class="bplayer"> </div>
         <div id="bplayers" class="owl-carousel owl-theme">
@@ -145,49 +141,48 @@
         </div>
     </div>
     <div class="points active">
-       <div class="photo-container-full">
-<!--          <img src="images/active-full.jpg" alt=""> -->
-          <div class="points-photo points-photo-full"> <span>01</span> </div>
-       </div>
+        <div class="photo-container-full">
+            <div class="points-photo points-photo-full"> <span>01</span> </div>
+        </div>
         <div class="photo-container"> <img src="images/active.jpg" alt="a man with phone">
             <div class="points-photo"> <span>01</span> </div>
         </div>
         <div class="points-text">
             <div class="points-text-block">
                 <h3>be active</h3>
-                <p>Post videos with your skills, Like and follow others to be more popular.</p> <img src="images/lineshort.png" alt="short line" class="line-short">
-            </div> </div>
+                <p>Post videos with your skills, Like and follow others to be more popular.</p> <img src="images/lineshort.png" alt="short line" class="line-short"> </div>
+        </div>
     </div>
     <div class="points find">
-      <div class="photo-container-full">
-<!--         <img src="images/find-full.jpg" alt=""> -->
-         <div class="points-photo points-photo-full"> <span>02</span> </div>
-      </div> 
+        <div class="photo-container-full">
+            <div class="points-photo points-photo-full"> <span>02</span> </div>
+        </div>
         <div class="photo-container"> <img src="images/find.jpg" alt="sportsman and coach">
             <div class="points-photo"> <span>02</span> </div>
         </div>
         <div class="points-text">
-           <div class="points-text-block">
-                 <h3>find contact</h3>
-                <p>Contact others to find right coach or athlete you are looking for</p> <img src="images/lineshort.png" alt="short line" class="line-short">
-            </div> </div>
+            <div class="points-text-block">
+                <h3>find contact</h3>
+                <p>Contact others to find right coach or athlete you are looking for</p> <img src="images/lineshort.png" alt="short line" class="line-short"> </div>
+        </div>
     </div>
     <div class="points work">
-       <div class="photo-container-full">
-<!--          <img src="images/work-full.jpg" alt=""> -->
-          <div class="points-photo points-photo-full"> <span>03</span> </div>
-       </div>
+        <div class="photo-container-full">
+            <div class="points-photo points-photo-full"> <span>03</span> </div>
+        </div>
         <div class="photo-container"> <img src="images/work.jpg" alt="sport team">
             <div class="points-photo"> <span>03</span> </div>
         </div>
         <div class="points-text">
             <div class="points-text-block">
                 <h3>work it</h3>
-                <p>Enjoy being a student athlete, the recruiting process can be overwhelmming, we want to make this a enjoyable experience</p> <img src="images/lineshort.png" alt="short line" class="line-short">
-            </div> </div>
+                <p>Enjoy being a student athlete, the recruiting process can be overwhelmming, we want to make this a enjoyable experience</p> <img src="images/lineshort.png" alt="short line" class="line-short"> </div>
+        </div>
     </div>
-    <div class="footer"> <img src="images/logo-simple.png" alt="only logo" class="logo-simple">
-        <div class="footer-text big"> <img src="images/fline1.png" alt="" class="fline1"> <img src="images/fline2.png" alt="" class="fline2"> <span class="download">download app</span> <span class="show">show everyone what ty can do!</span> </div>
+    <div class="footer"> <div class="footer-top">
+        <img src="images/logo-simple.png" alt="only logo" class="logo-simple">
+            <div class="footer-text big"> <img src="images/fline1.png" alt="" class="fline1"> <img src="images/fline2.png" alt="" class="fline2"> <span class="download">download app</span> <span class="show">show everyone what ty can do!</span> </div>
+    </div>
         <div class="buttons buttons-footer">
             <button><img src="images/Icon-Apple.png" alt="icon-apple"><span>
                  download on the <span>app store</span> </span>
