added 768-resolution styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Surface</title>
     <link rel="stylesheet" media="(max-width: 320px)" href="styles/style-320.css">
-    <link rel="stylesheet" media="(min-width: 321px)" href="styles/style.css">
+    <link rel="stylesheet" media="(max-width: 768px)" href="styles/style-768.css">
+    <link rel="stylesheet" media="(min-width: 769px)" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="owl-carousel/owl.theme.css" rel="stylesheet"> </head>
@@ -19,11 +20,11 @@
             </div>
         </div>
         <div class="buttons">
-            <button><img src="images/Icon-Apple.png" alt="icon-apple"><span>
-                 download on the <span>app store</span> </span>
+            <button class="apple"><img src="images/Icon-Apple.png" alt="icon-apple" class="img-apple"><span>
+                 download on the <br><span>app store</span> </span>
             </button>
-            <button><img src="images/Icon-Google-Play.png" alt="icon-google"><span>
-                get it on <span>google play</span> </span>
+            <button class="google"><img src="images/Icon-Google-Play.png" alt="icon-google" class="img-google"><span>
+                get it on<br> <span>google play</span> </span>
             </button>
         </div>
         <div class="sports big"> <span>football</span> <span>basketball</span> <span>baseball</span> <span>soccer</span> <span>ice hockey</span> </div>
@@ -104,7 +105,7 @@
             </div>
             <div class="noslider-text text-growth-players">
                 <div class="noslider-text-content left">
-                    <h3 class="growth">growth</h3>
+                    <h3 class="growth growth-violet">growth</h3>
                     <p>Save your time, recruit proper athlets for your team.</p>
                 </div>
             </div>
@@ -133,7 +134,7 @@
             <div class="item">
                 <div class="slider players">
                     <div class="slider-text">
-                        <h3 class="growth">growth</h3>
+                        <h3 class="growth growth-violet">growth</h3>
                         <p>Save your time, recruit proper athlets for your team.</p>
                     </div>
                 </div>
@@ -179,16 +180,16 @@
                 <p>Enjoy being a student athlete, the recruiting process can be overwhelmming, we want to make this a enjoyable experience</p> <img src="images/lineshort.png" alt="short line" class="line-short"> </div>
         </div>
     </div>
-    <div class="footer"> <div class="footer-top">
-        <img src="images/logo-simple.png" alt="only logo" class="logo-simple">
-            <div class="footer-text big"> <img src="images/fline1.png" alt="" class="fline1"> <img src="images/fline2.png" alt="" class="fline2"> <span class="download">download app</span> <span class="show">show everyone what ty can do!</span> </div>
-    </div>
+    <div class="footer">
+        <div class="footer-top"> <img src="images/logo-simple.png" alt="only logo" class="logo-simple">
+            <div class="footer-text big"> <img src="images/fline1.png" alt="" class="fline1"><img src="/images/line-full-2.png" alt="" class="fline1-768"><img src="/images/line-full-2.png" alt="" class="fline2-768"> <img src="images/fline2.png" alt="" class="fline2"> <span class="download">download app</span> <span class="show">show everyone what you can do!</span> </div>
+        </div>
         <div class="buttons buttons-footer">
-            <button><img src="images/Icon-Apple.png" alt="icon-apple"><span>
-                 download on the <span>app store</span> </span>
+            <button class="apple"><img src="images/Icon-Apple.png" alt="icon-apple" class="img-apple"><span>
+                 download on the <br> <span>app store</span> </span>
             </button>
-            <button><img src="images/Icon-Google-Play.png" alt="icon-google"><span>
-                get it on <span>google play</span> </span>
+            <button class="google"><img src="images/Icon-Google-Play.png" alt="icon-google" class="img-google"><span>
+                get it on <br> <span>google play</span> </span>
             </button>
         </div>
         <div class="social">
